--- a/Mortage-LP/MainWindow.xaml
+++ b/Mortage-LP/MainWindow.xaml
@@ -6,23 +6,29 @@
         xmlns:local="clr-namespace:Mortage_LP"
         mc:Ignorable="d"
         Title="MainWindow" Height="495.283" Width="525">
-    <Grid>
-        <Label x:Name="label" Content="Property Value" HorizontalAlignment="Left" Margin="125,45,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="Value" HorizontalAlignment="Left" Height="23" Margin="227,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" Margin="128,151,0,0" VerticalAlignment="Top" Height="101" Width="222" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" RowDetailsVisibilityMode="Visible">
+    <Grid Margin="0,0,0,-21">
+        <Label x:Name="label" Content="Property Value" HorizontalAlignment="Left" Margin="55,53,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="Value" Text="1000000" HorizontalAlignment="Left" Height="23" Margin="166,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <DataGrid x:Name="dataGridVars" HorizontalAlignment="Left" Margin="55,156,0,0" VerticalAlignment="Top" Height="101" Width="271" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" RowDetailsVisibilityMode="Visible">
             <DataGrid.Columns>
-                <DataGridTextColumn x:Name="Name" Header="Name" IsReadOnly="False" Binding="{Binding Path=Name}">
-                </DataGridTextColumn>
+                <DataGridTextColumn x:Name="Line" Header="Line" IsReadOnly="False" Binding="{Binding Path=Line}"/>
+                <DataGridTextColumn x:Name="Name" Header="Name" IsReadOnly="False" Binding="{Binding Path=Name}"/>
                 <DataGridTextColumn x:Name="MaxPercent" Header="Maximum %" IsReadOnly="False" Binding="{Binding Path=MaxValue}"/>
                 <DataGridTextColumn x:Name="Interest" Header="Interest" IsReadOnly="False" Binding="{Binding Path=Interest}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="button" Content="Calculate" HorizontalAlignment="Left" Margin="194,275,0,0" VerticalAlignment="Top" Width="105" Click="button_Click"/>
-        <Image x:Name="image" HorizontalAlignment="Left" Height="19" Margin="381,107,0,0" VerticalAlignment="Top" Width="18"/>
-        <Image x:Name="Image1_png" Margin="381,107,118,334" Source="Image1.png" Stretch="Fill" MouseLeftButtonUp="Image1_png_MouseLeftButtonUp" />
-        <TextBox x:Name="NameTB" HorizontalAlignment="Left" Height="23" Margin="128,107,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="59"/>
-        <TextBox x:Name="MaxTB" HorizontalAlignment="Left" Height="23" Margin="210,107,0,0" TextWrapping="NoWrap" Text="Max Percent" VerticalAlignment="Top" Width="59"/>
-        <TextBox x:Name="InterestTB" HorizontalAlignment="Left" Height="23" Margin="300,107,0,0" TextWrapping="Wrap" Text="Interest" VerticalAlignment="Top" Width="59"/>
+        <DataGrid x:Name="dataGridContrains" HorizontalAlignment="Left" Margin="55,325,0,0" VerticalAlignment="Top" Height="101" Width="210" CanUserResizeColumns="False" CanUserResizeRows="False" CanUserSortColumns="False" RowDetailsVisibilityMode="Visible">
+            <DataGrid.Columns>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="button" Content="Calculate" HorizontalAlignment="Left" Margin="91,444,0,0" VerticalAlignment="Top" Width="105" Click="button_Click"/>
+        <Image x:Name="image" HorizontalAlignment="Left" Height="19" Margin="308,118,0,0" VerticalAlignment="Top" Width="18"/>
+        <Image x:Name="AddLineBtn" Margin="308,118,191,323" Source="Image1.png" MouseLeftButtonUp="Image1_png_MouseLeftButtonUp" />
+        <Image x:Name="AddCntBtn" Margin="308,265,191,176" Source="Image1.png" MouseLeftButtonUp="AddCntBtn_MouseLeftButtonUp" />
+        <TextBox x:Name="NameTB" HorizontalAlignment="Left" Height="23" Margin="55,118,0,0" TextWrapping="Wrap" Text="X1" VerticalAlignment="Top" Width="59"/>
+        <TextBox x:Name="MaxTB" HorizontalAlignment="Left" Height="23" Margin="137,118,0,0" TextWrapping="NoWrap" Text="50" VerticalAlignment="Top" Width="59"/>
+        <TextBox x:Name="InterestTB" HorizontalAlignment="Left" Height="23" Margin="227,118,0,0" TextWrapping="Wrap" Text="0.018" VerticalAlignment="Top" Width="59"/>
+        <TextBox x:Name="ContrainTB" HorizontalAlignment="Left" Height="23" Margin="55,277,0,0" TextWrapping="Wrap" Text="Contrain" VerticalAlignment="Top" Width="231"/>
 
     </Grid>
 </Window>
