--- a/Mortage-LP/MainWindow.xaml
+++ b/Mortage-LP/MainWindow.xaml
@@ -28,8 +28,8 @@
         <Button x:Name="buttonTest1" Content="T1" HorizontalAlignment="Left" Margin="450,42,0,0" Width="37" Click="buttonTest_Click" Grid.Row="2" Height="20" VerticalAlignment="Top"/>
         <Button x:Name="buttonTest2" Content="T2" HorizontalAlignment="Left" Margin="450,67,0,0" Width="37" Click="buttonTest_Click" Height="20" VerticalAlignment="Top" Grid.Row="2"/>
         <Image x:Name="image" HorizontalAlignment="Left" Height="19" Margin="308,118,0,0" VerticalAlignment="Top" Width="18"/>
-        <Image x:Name="AddLineBtn" Margin="374,110,0,0" Source="Image1.png" MouseLeftButtonUp="Image1_png_MouseLeftButtonUp" RenderTransformOrigin="0.333,1.818" HorizontalAlignment="Left" Width="37" Height="29" VerticalAlignment="Top" />
-        <Image x:Name="AddCntBtn" Margin="364,5,0,0" Source="Image1.png" MouseLeftButtonUp="AddCntBtn_MouseLeftButtonUp" RenderTransformOrigin="3.389,0.98" HorizontalAlignment="Left" Width="37" Height="29" VerticalAlignment="Top" Grid.Row="1" />
+        <Image x:Name="AddLineBtn" Margin="374,118,0,0" Source="Image1.png" MouseLeftButtonUp="Image1_png_MouseLeftButtonUp" RenderTransformOrigin="0.333,1.818" HorizontalAlignment="Left" Width="27" Height="29" VerticalAlignment="Top" />
+        <Image x:Name="AddCntBtn" Margin="374,5,0,0" Source="Image1.png" MouseLeftButtonUp="AddCntBtn_MouseLeftButtonUp" RenderTransformOrigin="3.389,0.98" HorizontalAlignment="Left" Width="27" Height="29" VerticalAlignment="Top" Grid.Row="1" />
         <TextBox x:Name="NameTB" HorizontalAlignment="Left" Height="23" Margin="149,121,0,0" TextWrapping="Wrap" Text="Bank" VerticalAlignment="Top" Width="59" TextAlignment="Center"/>
         <TextBox x:Name="MaxTB" HorizontalAlignment="Left" Height="23" Margin="227,121,0,0" TextWrapping="NoWrap" Text="100" VerticalAlignment="Top" Width="43" TextAlignment="Center"/>
         <TextBox x:Name="InterestTB" HorizontalAlignment="Left" Height="23" Margin="309,121,0,0" TextWrapping="Wrap" Text="0.15" VerticalAlignment="Top" Width="50" TextAlignment="Center"/>
@@ -42,6 +42,7 @@
         <Label x:Name="label4" Content="Name" HorizontalAlignment="Left" Margin="149,95,0,0" VerticalAlignment="Top" Width="59"/>
         <Label x:Name="label5" Content="Max Percent" HorizontalAlignment="Left" Margin="213,95,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label6" Content="Interest" HorizontalAlignment="Left" Margin="309,95,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="SeeCnts" Content="See Contrains" HorizontalAlignment="Left" Margin="422,130,0,0" Grid.Row="1" VerticalAlignment="Top" Width="85" Click="SeeCnts_Click"/>
 
     </Grid>
 </Window>
