--- a/Mortage-LP/MainWindow.xaml
+++ b/Mortage-LP/MainWindow.xaml
@@ -33,12 +33,12 @@
         <TextBox x:Name="NameTB" HorizontalAlignment="Left" Height="23" Margin="149,121,0,0" TextWrapping="Wrap" Text="Bank" VerticalAlignment="Top" Width="59" TextAlignment="Center"/>
         <TextBox x:Name="MaxTB" HorizontalAlignment="Left" Height="23" Margin="227,121,0,0" TextWrapping="NoWrap" Text="100" VerticalAlignment="Top" Width="43" TextAlignment="Center"/>
         <TextBox x:Name="InterestTB" HorizontalAlignment="Left" Height="23" Margin="309,121,0,0" TextWrapping="Wrap" Text="0.15" VerticalAlignment="Top" Width="50" TextAlignment="Center"/>
-        <TextBox x:Name="ContrainTB" HorizontalAlignment="Left" Height="23" Margin="149,9,0,0" TextWrapping="Wrap" Text="Contrain" VerticalAlignment="Top" Width="210" Grid.Row="1"/>
+        <TextBox x:Name="ContrainTB" HorizontalAlignment="Left" Height="23" Margin="149,9,0,0" TextWrapping="Wrap" Text="Constrain" VerticalAlignment="Top" Width="210" Grid.Row="1"/>
         <TextBox x:Name="ContrainsTB" HorizontalAlignment="Left" Margin="55,54,0,11" TextWrapping="Wrap" Text="" Width="346" Grid.Row="1"/>
         <TextBox x:Name="FormulaTB" Margin="166,0,0,84" TextWrapping="Wrap" Text="" Grid.Row="2" Height="23" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="321"/>
         <Label x:Name="label1" Content="Target Formula" HorizontalAlignment="Left" Margin="55,7,0,0" Grid.Row="2" Height="26" VerticalAlignment="Top"/>
         <Label x:Name="label2" Content="Add Contrain" HorizontalAlignment="Left" Margin="55,5,0,0" VerticalAlignment="Top" Grid.Row="1"/>
-        <Label x:Name="label3" Content="Add Contrain" HorizontalAlignment="Left" Margin="55,118,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label3" Content="Add Variable" HorizontalAlignment="Left" Margin="55,118,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label4" Content="Name" HorizontalAlignment="Left" Margin="149,95,0,0" VerticalAlignment="Top" Width="59"/>
         <Label x:Name="label5" Content="Max Percent" HorizontalAlignment="Left" Margin="213,95,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label6" Content="Interest" HorizontalAlignment="Left" Margin="309,95,0,0" VerticalAlignment="Top"/>
